<resources>
    <string name="app_name">Qr storage</string>
    <string name="file_storage_info">The uploaded file is stored in our safe storage and can be shared with anyone through the generated QR</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="all_scans">All Scans</string>
    <string name="quick_scan">Quick Scan</string>
    <string name="enter_tag">Enter tag</string>
    <string name="qr_text">QR Text</string>
    <string name="upload_a_file">Upload a file</string>
    <string name="browse_to_choose_a_file">browse to choose a file</string>
    <string name="generate_qr">Generate QR</string>
    <string name="text">Text</string>
    <string name="file">File</string>
    <string name="no_recent_scans">No recent scans</string>
    <string name="file_deletion_info">The file will be erased from storage after 7 days.\n To increase duration buy premium</string>
    <string name="edit_tag">Edit tag</string>
    <string name="tag_cannot_be_empty">Tag cannot be empty</string>
    <string name="permission_is_required_to_save">permission is required to save</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="qr_image_saved_to_gallery">QR image saved to gallery</string>
    <string name="share_qr_code">Share QR code</string>
    <string name="error_scanning_qr_code">Error scanning QR code</string>
    <string name="scan_cancelled">Scan cancelled</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="no_compatible_app_found">No compatible app found</string>
    <string name="share_via">Share via</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_signing_up_you_agree_to_our_terms_privacy_policy"><![CDATA[by signing up you agree to our Terms & Privacy Policy]]></string>
    <string name="please_accept_terms">please accept terms and conditions\n</string>
    <string name="web_client">1028817467707-dj5hgj72lbc7cpliski6v5fob78h7079.apps.googleusercontent.com</string>
    <string name="password_mismatch">password and confirm password must be same</string>
</resources>