<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="8dp"
                app:strokeColor="@color/primary_blue"
                app:strokeWidth="1dp"
                android:layout_marginBottom="20dp">
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/textRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:checked="true"
                        android:gravity="center"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:text="@string/text"/>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/fileRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/text_color_selector"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/file"/>
                </RadioGroup>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/enter_tag"
                app:helperText="Add a tag to your scan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tagInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/qrTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/qr_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/qrTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/uploadFileButton"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"
                android:layout_marginBottom="30dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/dashed_stroke" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:contentDescription="@string/upload_a_file"
                        android:src="@drawable/ic_upload" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_a_file"
                        android:textColor="@color/primary_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/browse_to_choose_a_file"
                        android:textColor="@color/primary_blue"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/uploadedFileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="gone"
                android:background="@drawable/dashed_stroke"
                android:layout_marginBottom="30dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_file"
                        android:layout_marginEnd="8dp"
                        app:tint="@color/primary_blue"/>

                    <TextView
                        android:id="@+id/fileName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="file.jpg"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="middle"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:textColor="@color/primary_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/clearFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_clear"
                        app:tint="@color/primary_blue"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/generateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/generate_qr"
                app:backgroundTint="@color/primary_blue"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="12dp" />

            <TextView
                android:id="@+id/fileStorageInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_error"
                android:drawableTint="@color/primary_blue"
                android:visibility="gone"
                android:drawablePadding="10dp"
                android:textSize="12sp"
                android:textColor="@color/primary_blue"
                android:text="@string/file_storage_info"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recent_scans"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/allScansButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_scans"
                    android:textColor="@color/primary_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentScansRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:id="@+id/noScansTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_recent_scans"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/quickScanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        app:backgroundTint="@color/primary_blue"
        android:text="@string/quick_scan"
        app:icon="@drawable/ic_qr_scan" />

</FrameLayout>


